# banking-crm-agent

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASSIGNMENT.md  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  prompts.py  state.py
backend/app/api/routes/: chat.py
backend/app/core/: logging.py
backend/app/db/: connection.py  models.py  queries.py
backend/app/logic/: recommendation.py  scoring.py
backend/app/tools/: data_tools.py  messaging_tools.py  recommend_tool.py  scoring_tool.py
backend/data/: generate_seed.py
backend/migrations/: env.py
backend/migrations/versions/: 526ef4fe192e_initial_schema.py
backend/tests/: conftest.py  test_recommendation.py  test_scoring.py  test_tools.py
backend/tests/tools/: conftest.py  test_tools.py
docs/: ARCHITECTURE.md  PLAN.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
