[project]
name = "banking-crm-agent"
version = "0.1.0"
description = "Conversational agentic AI assisting a Relationship Manager (RM) for a banking CRM"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "langgraph==0.2.60",
    "langchain-anthropic==0.3.1",
    "langchain-core==0.3.28",
    "pydantic-settings==2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
# Conservative, standard set: pycodestyle errors, pyflakes, isort.
select = ["E", "F", "I"]
# Line width is owned by the formatter (ruff format); don't also flag E501.
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
